# simplegithooks

./: .gitignore  README.md  pyproject.toml
src/githooker/: __init__.py  githooker.py  pre-commit.py
src/simplegithooks/: __init__.py  cli.py  colors.py  git_hooks.py  pre_commit.py  pre_commit_example.py
