[project]
name = "githooker"
version = "1.1.0"
description = "Write pretty and concise Git hooks in Python."
readme = "README.md"
requires-python = ">=3.12"
authors = [{"name"="Kamil Cyganowski", email="kamil.cyganowski@gmail.com"}]
license = "MIT"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=html:.htmlcov/ -v --tb=short -s"
env = [
    "PYTHONBREAKPOINT=ipdb.set_trace",
 ]

[tool.coverage.run]
omit = []

[tool.coverage.report]
skip_covered = true
skip_empty = true
show_missing = true
fail_under = 100

[tool.ruff]
line-length = 120
